# image_diff_review

./: .gitignore  AUTHORS  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/: copyright.sh
.github/workflows/: ci.yml
example/: Cargo.toml  README.md
example/.cargo/: config.toml
example/demolib/: Cargo.toml
example/demolib/src/: lib.rs  test_utils.rs
example/xtask_kompari/: Cargo.toml
example/xtask_kompari/src/: main.rs
kompari/: Cargo.toml
kompari/src/: difference.rs  report.rs  xtask_cli.rs
src/: difference.rs  fs.rs  lib.rs  main.rs  pair.rs  report.rs  xtask_cli.rs
