[package]
name = "kompari"
version = "0.1.0"
edition = "2021"

license = "MIT"
description = "Reporting tool of image differences for snaphost testing"
repository = "https://github.com/spirali/image_diff_review"
readme = "README.md"
keywords = ["image", "report", "diff", "tests"]

[dependencies]
base64 = "0.22"
chrono = "0.4"
image = { version = "0.25", default-features = false }
maud = "0.26"
thiserror = "2"
clap = { version = "4.5", features = ["derive"], optional = true }

[features]
default = ["png"]
all-formats = ["png", "jpeg", "webp", "bmp", "tiff"]
png = ["image/png"]
bmp = ["image/bmp"]
tiff = ["image/tiff"]
jpeg = ["image/jpeg"]
webp = ["image/webp"]
cli = ["clap"]

[[bin]]
name = "kompari"
required-features = ["cli"]
